# mrn

./: Cargo.toml  techstack.md  techstack.yml
src/: main.rs  mover.rs  transform_list.rs
src/helpers/: exif.rs  mod.rs
