[package]
name = "mrn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
regex = "1.6.0"
walkdir = "2.3.2"
rayon = "1.5.3"
jsonl = "4.0.1"
serde = { version = "1.0.139", features = ["derive"] }
handlebars = "4.3.3"
log = "0.4.17"
env_logger = "0.9.0"
colored = "2"
serde_json = "1.0.82"
heck = "0.4.0"
# Helpers
kamadak-exif = { version = "0.5.4", optional = true }

[features]
exif = ["dep:kamadak-exif"]
